[workspace]
resolver = "2"
members = [
	"crates/icy_board", 
	"crates/icy_board_engine", 
	"crates/icy_ppe", 
	"crates/jamjam",
	"crates/dizbase",
	"crates/codepages",
	"crates/pplc",
	"crates/ppld",
	"crates/pplx",
	"crates/ppl-lsp",
	"crates/scandb",
	"crates/codepages", 
	"crates/icy_board_tui",
	"crates/mkicbmnu",
	"crates/icy_net",
	"crates/mkicbtxt", 
]
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]

[workspace.dependencies]
codepages = { path = "crates/codepages" }
dizbase = { path = "crates/dizbase" }
jamjam = { path = "crates/jamjam" }
icy_board_tui = { path = "crates/icy_board_tui" }

icy_net = { path = "crates/icy_net" }
icy_ppe = { path = "crates/icy_ppe" }
icy_board_engine = { path = "crates/icy_board_engine" }
icy_engine = { git ="https://github.com/mkrueger/icy_tools" }

lazy_static = "1.4.0"
semver = "1.0.20"
thiserror = "1.0.57"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
log = "0.4.14"
chrono = { version = "0.4.37", features = ["serde"] }
bstr = "1.9.1"
serde = "1.0.197"
tokio = { version = "1.37.0", features = ["full"] }
rayon = "1.10.0"
regex = "1.10.4"

walkdir = "2.5.0"
i18n-embed = { version = "0.14.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.8.0"
fluent-bundle = "0.15.2"
rust-embed = "8.3.0"
once_cell = "1.18.0"
unicase = "2.7.0"
toml = "0.8.12"
rand = "0.8.4"
color-eyre = "0.6.3"
tempfile = "3.10.1"
substring = "1.4.5"
strum = "0.26.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
