[workspace]
resolver = "2"
members = [
	"crates/icy_board", 
	"crates/icy_board_engine", 
	"crates/jamjam",
	"crates/dizbase",
	"crates/codepages",
	"crates/pplc",
	"crates/ppld",
	"crates/ppl-lsp",
	"crates/scandb",
	"crates/codepages", 
	"crates/icy_board_tui",
	"crates/mkicbmnu",
	"crates/icy_net",
	"crates/mkicbtxt", 
	"crates/icbsetup",
	"crates/icbmailer",
	"crates/icbsysmgr",
]
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]

[workspace.dependencies]
codepages = { path = "crates/codepages" }
dizbase = { path = "crates/dizbase" }
jamjam = { path = "crates/jamjam" }
icy_board_tui = { path = "crates/icy_board_tui" }

icy_net = { path = "crates/icy_net" }
icy_board_engine = { path = "crates/icy_board_engine" }
icy_engine = { git ="https://github.com/mkrueger/icy_tools" }
 
lazy_static = "1.5.0"
semver = "1.0.23"
thiserror = "1.0.64"
argh = "0.1.12"
crossterm = "0.28.1"
ratatui = "0.28.1"
log = "0.4.22"
chrono = { version = "0.4.37", features = ["serde"] }
bstr = "1.10.0"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
rayon = "1.10.0"
regex = "1.11.0"

walkdir = "2.5.0"
i18n-embed = { version = "0.15.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.9.1"
fluent-bundle = "0.15.3"
rust-embed = "8.5.0"
once_cell = "1.20.2"
unicase = "2.7.0"
toml = "0.8.19"
rand = "0.8.5"
color-eyre = "0.6.3"
tempfile = "3.13.0"
substring = "1.4.5"
strum = "0.26.3"
itertools = "0.13.0"
fern = "0.7.0"
ariadne = "0.5.0"
relative-path = "1.9.3"

tui-textarea  = "0.6.1"
tui-markdown = "0.2.12"
tui-input = "0.10.1"
# tui-markdown = { git = "https://github.com/joshka/tui-markdown" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
