[package]
name = "dizbase"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

murmurhash64 = "0.3.1"
zip = "0.6"
delharc = "0.6.0"
unrar = "0.5.3"
icy_sauce = { git ="https://github.com/mkrueger/icy_tools" }

tempfile = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
codepages = { workspace = true}

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1"
