[package]
name = "icboard"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_board_engine = { workspace = true}
icy_board_tui = { workspace = true}
jamjam = { workspace = true}
codepages = { workspace = true}
dizbase = { workspace = true}
icy_engine = { workspace = true }
icy_net = { workspace = true }

lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
argh = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bstr = { workspace = true }
walkdir = { workspace = true }
substring = { workspace = true }
ariadne = { workspace = true }
unicase = { workspace = true }
fern = { workspace = true }
qfile = { path = "../qfile" }
easy_reader = "0.5.2"
toml = { workspace = true }
md-to-tui = "0.1.2"
relative-path = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
http = "1.1.0"

# for file view kb/mb
async-recursion = "1.1.1"

russh = "0.50.2"
russh-keys = "0.50.0-beta.7"
async-trait = "0.1.83"
