[package]
name = "icboard"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_board_engine = { workspace = true}
icy_board_tui = { workspace = true}
icy_parser_core = { workspace = true}
jamjam = { workspace = true}
codepages = { workspace = true}
dizbase = { workspace = true}
icy_engine = { workspace = true }
icy_net = { workspace = true }

lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
argh = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bstr = { workspace = true }
walkdir = { workspace = true }
substring = { workspace = true }
ariadne = { workspace = true }
unicase = { workspace = true }
fern = { workspace = true }
qfile = { path = "../qfile" }
easy_reader = "0.5.2"
toml = { workspace = true }
md-to-tui = "0.1.2"
relative-path = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.13"
http = "1.1.0"

# for file view kb/mb
async-recursion = { workspace = true }

russh = "0.54.5"
internal-russh-forked-ssh-key = "0.6.7-internal.6"
async-trait =  { workspace = true }
