[package]
name = "icbsysmgr"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_board_engine = { workspace = true }
icy_board_tui = { workspace = true }
icy_net = { workspace = true }
dizbase = { workspace = true }
codepages = { workspace = true }

lazy_static = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
argh = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
bstr = { workspace = true }
jamjam = { workspace = true}
regex = { workspace = true}
walkdir = { workspace = true }
qfile = { path = "../qfile" }
relative-path = { workspace = true }
 
tui-textarea  = { workspace = true }
tui-markdown = { workspace = true }
ariadne = { workspace = true }
unicase = { workspace = true }
color-eyre = { workspace = true }
itertools = { workspace = true }

substring = { workspace = true }
strum = { workspace = true }
log = { workspace = true }
fern = { workspace = true }