[package]
name = "icy_board"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_board_engine = { workspace = true}
icy_board_tui = { workspace = true}
jamjam = { workspace = true}
codepages = { workspace = true}
dizbase = { workspace = true}
icy_engine = { workspace = true }
icy_net = { workspace = true }

lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
argh = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bstr = { workspace = true }
walkdir = { workspace = true }
substring = { workspace = true }
ariadne = { workspace = true }
unicase = { workspace = true }
fern = { workspace = true }
qfile = { path = "../qfile" }
easy_reader = "0.5.2"
toml = { workspace = true }
md-to-tui = "0.1.2"
relative-path = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
temp-file = "0.1.9"
http = "1.1.0"
md5 = "0.7.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }

# for file view kb/mb
humanize-bytes = "1.0.5"
async-recursion = "1.1.1"
