[package]
name = "icy_board_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { workspace = true }
icy_net = { workspace = true }
codepages = { workspace = true }

lazy_static = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_with = "3.8.1"
tokio = { workspace = true }
semver = { workspace = true }

unicase = { workspace = true }
rand = { workspace = true }
jamjam = { workspace = true }
bstr = { workspace = true }

strum = { workspace = true }
strum_macros = "0.26.2"

async-recursion = "1.1.1"
radix_fmt = "1"
qfile = { path = "../qfile" }
byteorder = "1.5.0"
toml = { workspace = true }
async-trait = "0.1.83"
logos = "0.14.0"
# interpreter deps
[dev-dependencies]
pretty_assertions = "1"
stopwatch = "0.0.7"

[target.'cfg(not(windows))'.dependencies]
# termion is not supported on Windows
termion = { version = "4.0.0", optional = true }