[package]
name = "icy_board_engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { workspace = true }
icy_net = { workspace = true }
codepages = { workspace = true }

lazy_static = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
dizbase = { workspace = true}
crossterm = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_with = "3.8.1"
tokio = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
bitflag = { workspace = true }
tempfile = { workspace = true }

unicase = { workspace = true }
rand = { workspace = true }
jamjam = { workspace = true }
bstr = { workspace = true }

strum = { workspace = true }
strum_macros = "0.26.2"
serde-inline-default = "0.2.3"

async-recursion = "1.1.1"
radix_fmt = "1"
qfile = { path = "../qfile" }
byteorder = "1.5.0"
toml = { workspace = true }
async-trait = "0.1.83"
logos = "0.15.0"
humanize-bytes = "1.0.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
md5 = "0.7.0"
temp-file = "0.1.9"
glob = "0.3.2"
chumsky = "0.9.3"
creditcard = "0.1.0"
zip = "2.2.3"
argon2 = "0.5.3"
bcrypt = "0.17.1"

# interpreter deps
[dev-dependencies]
pretty_assertions = "1"
stopwatch = "0.0.7"

[target.'cfg(not(windows))'.dependencies]
# termion is not supported on Windows
termion = { version = "4.0.0", optional = true }
