[package]
name = "icy_board_tui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
semver = "1.0.20"
thiserror = "1.0.57"
unicase = "2.7.0"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
color-eyre = "0.6.3"

i18n-embed = { version = "0.14.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.8.0"
fluent-bundle = "0.15.2"
rust-embed = "8.3.0"
once_cell = "1.18.0"

