[package]
name = "icy_board_tui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
thiserror = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
semver = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

unicase = { workspace = true }
color-eyre = { workspace = true }
icy_board_engine = { workspace = true }
icy_engine = { workspace = true }

i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
fluent-bundle = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }