[package]
name = "icy_net"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
icy_engine = { workspace = true }
tokio = { workspace = true }
lazy_static = { workspace = true }
semver = { workspace = true }
tokio-util = { version = "0.7.10", features = ["codec"] }
regex = { workspace = true }
async-trait = "0.1.83"
async-recursion = "1.1.1"

bytes = "1"
# MODEM
serial2-tokio = "0.1.10"

# SSH
russh = "0.54.5"
internal-russh-forked-ssh-key = "0.6.7-internal.6"

# WEBSOCKETS
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-webpki-roots", # webpki root CAs
    "__rustls-tls",            # use Rustls
]}

http = "1.1.0"
url = "2.5.0"
rustls = { version = "0.23.0", features = [
    "tls12",
 #   "dangerous_configuration"  # Allow invalid certs/etc.
]}
rustls-pemfile = "2"
webpki-roots = "1.0.3"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
pretty_assertions = "1"
