[package]
name = "icy_net"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
lazy_static = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
async-trait =  { workspace = true }

bytes = "1"
# MODEM
serial2-tokio = { version = "0.1.19", features = ["unix"] }

# SSH
russh = "0.55.0"
internal-russh-forked-ssh-key = "0.6.7-internal.6"

# WEBSOCKETS
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-webpki-roots", # webpki root CAs
    "__rustls-tls",            # use Rustls
]}

http = "1.1.0"
url = "2.5.0"
rustls = { version = "0.23.0", features = [
    "tls12",
 #   "dangerous_configuration"  # Allow invalid certs/etc.
]}
rustls-pemfile = "2"
webpki-roots = "1.0.3"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
libc = { version = "0.2.177", optional = true }

[target.'cfg(unix)'.dependencies]
libc_unix = { package = "libc", version = "0.2" }

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"

[features]
libc = ["dep:libc"]
