[package]
name = "icy_ppe"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
codepages = { workspace = true }

unicase = { workspace = true }
toml = { workspace = true }

# interpreter deps
[dev-dependencies]
stopwatch = "0.0.7"
