[package]
name = "jamjam"
version = "0.2.0"
edition = "2021"
description = "Handles JAM, PCBOARD message bases & QWK packets."
authors = ["Mike Krüger <mkrueger@posteo.de>"]
homepage = "https://github.com/mkrueger/jamjam"
repository = "https://github.com/mkrueger/jamjam"
license-file = "LICENSE"
keywords = ["jam", "pcboard", "qwk", "qwke", "messagebase"]

[dependencies]
thiserror = "1.0.58"
rayon = "1.10.0"
log = "0.4.14"
chrono = "0.4.37"
rand = "0.8.4"
bstr = "1.9.1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
