[package]
name = "jamjam"
version = "0.2.0"
edition = "2021"
description = "Handles JAM, PCBOARD message bases & QWK packets."
authors = ["Mike Krüger <mkrueger@posteo.de>"]
homepage = "https://github.com/mkrueger/jamjam"
repository = "https://github.com/mkrueger/jamjam"
license-file = "LICENSE"
keywords = ["jam", "pcboard", "qwk", "qwke", "messagebase"]

[dependencies]
lazy_static = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
bstr = { workspace = true }

rayon = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = { workspace = true }
