[package]
name = "mkicbmnu"
edition.workspace = true
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_board_engine = { workspace = true }
icy_board_tui = { workspace = true }

lazy_static = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
argh = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
log = { workspace = true }

tui-input = "0.8.0"
ariadne = "0.4.0"
fern = "0.6.2"
unicase = { workspace = true }
color-eyre = { workspace = true }
itertools = "0.12.1"
substring = { workspace = true }
strum = { workspace = true }

