[package]
name = "mkicbtxt"
edition.workspace = true
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_board_engine = { workspace = true }
icy_board_tui = { workspace = true }

lazy_static = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
argh = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tui-input = { workspace = true }
ariadne = { workspace = true }
unicase = { workspace = true }
color-eyre = { workspace = true }
itertools = { workspace = true }
substring = { workspace = true }
strum = { workspace = true }
