[package]
name = "ppl-language-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_ppe = { workspace = true }

log = { workspace = true }
once_cell = { workspace = true }
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
unicase = { workspace = true }

env_logger = "0.11.3"
ropey = "1.5.0"
serde_json = "1.0.78"

tower-lsp = { version = "0.20.0", features = ["proposed"]}
dashmap = "5.1.0"
im-rc = "15.0.0"
