[package]
name = "ppl-language-server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_board_engine = { workspace = true }

log = { workspace = true }
once_cell = { workspace = true }
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
unicase = { workspace = true }

chumsky = "0.9.3"
env_logger = "0.11.5"
ropey = "1.5.0"
serde_json = "1.0.78"
tower-lsp = { version = "0.20.0", features = ["proposed"]}
dashmap = "6.1.0"
im-rc = "15.0.0"
oxc_index = "0.36.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
rust-lapper = "1.1.0"


