[package]
name = "pplc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
icy_board_engine = { workspace = true }

lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }

ariadne = "0.4.0"
unicase = { workspace = true }
