[package]
name = "pplc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codepages = { workspace = true }
icy_engine = { workspace = true }
icy_board_engine = { workspace = true }

lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
argh = { workspace = true }
crossterm = { workspace = true }

ariadne = { workspace = true }
unicase = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
