[package]
name = "ppld"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
icy_ppe = { workspace = true }
lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }