[package]
name = "pplx"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
icy_ppe = { workspace = true }
icy_board_engine = { workspace = true }
lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
