[package]
name = "scandb"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dizbase = { workspace = true }

lazy_static = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
argh = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
rayon = { workspace = true }
icy_engine = { workspace = true }
murmurhash64 = "0.3.1"
