[package]
name = "tree-sitter-ppl"
description = "PPL was a BBS specific programming language."
version = "0.1.0"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pcboard"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mkrueger/icy_board/"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
